less height for navbar

--- a/README.html
+++ b/README.html
@@ -104,7 +104,10 @@ ul.task-list li input[type="checkbox"] {
 <section id="navigation-bar" class="level3">
 <h3 class="anchored" data-anchor-id="navigation-bar">Navigation Bar</h3>
 <p><strong>Background color:</strong> set in _quarto.yml</p>
-<p>CSS</p>
+<p><strong>CSS</strong></p>
+<ul>
+<li><strong>.navbar:</strong> height</li>
+</ul>
 </section>
 </section>
 </section>
